# chatgpt-export-tool

./: .gitignore  Fields.md  LICENSE  README.md  analyze_json.py  analyze_json.py.old  chatgpt_export.toml  chatgpt_export.toml.example  pyproject.toml
chatgpt_export_tool/: __init__.py  cli.py  project_metadata.py
chatgpt_export_tool/commands/: __init__.py  analyze.py  export.py  options.py
chatgpt_export_tool/core/: __init__.py  analysis_collector.py  analysis_formatter.py  category_fields.py  config_models.py  config_validation.py  conversation_access.py  conversation_filter.py  conversation_formatters.py  conversation_stream.py  export_service.py  field_config.py  field_groups.py  field_rules.py  field_selector.py  field_spec.py  field_validation.py  file_naming.py  file_utils.py  filter_builder.py  filter_models.py  filter_pipeline.py  formatters.py  logging_utils.py  metadata_rules.py  metadata_selector.py  metadata_validation.py  name_matching.py  output_paths.py  output_writer.py  parser.py  pattern_matching.py  runtime_config.py  split_keys.py  splitter.py  thread_transcript.py  utils.py  validators.py
chatgpt_export_tool/core/config/: __init__.py  models.py  runtime.py  validation.py
chatgpt_export_tool/core/output/: __init__.py  formatters.py  naming.py  paths.py  split_keys.py  writer.py
chatgpt_export_tool/core/transcript/: __init__.py  access.py  thread.py
chatgpt_export_tool/core/validation/: __init__.py  fields.py  metadata.py  models.py
chatgpt_export_tool/data/: fields.json
plans/: export_architecture.md  filtering_validation_architecture.md
tests/: __init__.py  test_analysis_collector.py  test_analyze.py  test_analyze_json.py  test_atomic_validation.py  test_cli_contract.py  test_cli_main.py  test_commands_base.py  test_config_validation.py  test_conversation_access.py  test_conversation_filter.py  test_conversation_formatters.py  test_field_rules.py  test_field_spec.py  test_filter_pipeline.py  test_metadata_selector.py  test_name_matching.py  test_output_paths.py  test_output_writer.py  test_project_metadata.py  test_runtime_config.py  test_runtime_contract.py  test_split_keys.py  test_splitter.py  test_thread_transcript.py  test_validators.py
