[project]
name = "chatgpt-export-tool"
version = "0.1"
description = "A Python tool for exporting and analyzing ChatGPT conversations.json export files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Developer"}
]
keywords = ["chatgpt", "json", "export", "conversations", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ijson>=3.2.0",
]

[project.scripts]
chatgpt-export = "chatgpt_export_tool.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chatgpt_export_tool*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["chatgpt_export_tool"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.7",
]
